# Nexus-Cyber-security-OS

./: .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  CODEOWNERS  CONTRIBUTING.md  LICENSE-BSL  README.md  commitlint.config.js  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/: BRANCH_PROTECTION.md  branch-protection.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: charter-f5-live.yml  ci.yml  f5-ltree-diagnostic.yml  kg-loop-live.yml  lint.yml  live-deviator.yml  live-llm.yml  live-orchestrator-workers.yml  live-safety-critical.yml  live-standard.yml
.husky/: pre-commit
docker/: README.md  docker-compose.dev.yml
docs/: README.md
docs/_meta/: a-4-meta-harness-v0-1-verification-2026-05-21.md  a-4-meta-harness-v0-2-5-demo-runbook-2026-06-07.md  a-4-meta-harness-v0-2-5-quality-delta-2026-06-07.md  a-4-meta-harness-v0-2-5-verification-2026-06-07.md  a-4-meta-harness-v0-2-verification-2026-05-23.md  a1-safety-verification-2026-05-16.md  a1-v0-1-1-verification-2026-05-17.md  a1-v0-1-2-verification-2026-05-17.md  a1-verification-2026-05-16.md  agent-capability-vs-wiz-2026-06-07.md  agent-detection-maturity-v0-1-to-v0-3-2026-06-07.md  aispm-d11-v0-4-closed-2026-06-18.md  audit-v0-2-charter-jsonl-coverage-2026-06-12.md  audit-v0-2-cross-agent-coverage-2026-06-12.md  audit-v0-2-cross-agent-sweep-2026-06-12.md  audit-v0-2-f5-episodes-coverage-2026-06-12.md  audit-v0-2-verification-2026-06-12.md  branch-pr-hygiene-audit-2026-05-30.md  compliance-v0-2-cis-aws-coverage-2026-06-11.md  compliance-v0-2-cis-azure-coverage-2026-06-11.md  compliance-v0-2-cis-gcp-coverage-2026-06-11.md  compliance-v0-2-cis-k8s-coverage-2026-06-11.md  compliance-v0-2-cross-agent-sweep-2026-06-11.md  compliance-v0-2-verification-2026-06-11.md  curiosity-v0-2-verification-2026-06-13.md  d-1-vulnerability-v0-2-acr-coverage-2026-06-09.md  d-1-vulnerability-v0-2-cross-agent-sweep-2026-06-09.md  d-1-vulnerability-v0-2-ecr-coverage-2026-06-09.md  d-1-vulnerability-v0-2-gcr-coverage-2026-06-09.md  d-1-vulnerability-v0-2-verification-2026-06-09.md  d-12-curiosity-v0-1-verification-2026-05-21.md  d-13-synthesis-v0-1-verification-2026-05-21.md  d-14-appsec-v0-3-coverage-2026-06-15.md  d-2-identity-v0-2-ciem-coverage-2026-06-10.md  d-2-identity-v0-2-cross-agent-sweep-2026-06-10.md  d-2-identity-v0-2-verification-2026-06-10.md  d-3-runtime-threat-v0-2-cross-agent-sweep-2026-06-10.md  d-3-runtime-threat-v0-2-falco-coverage-2026-06-10.md  d-3-runtime-threat-v0-2-tracee-coverage-2026-06-10.md  d-3-runtime-threat-v0-2-verification-2026-06-10.md  (+130 more)
docs/_meta/backlog/: 2026-06-08-adr-013-cross-agent-correlation.md  2026-06-08-flaky-audit-caplog-test.md  2026-06-08-hermes-agents.md  2026-06-08-parked-architectural-work.md  2026-06-08-wazuh-compliance-enrichment.md  v0-5.md
docs/_meta/decisions/: ADR-001-monorepo-bootstrap.md  ADR-002-charter-as-context-manager.md  ADR-003-llm-provider-strategy.md  ADR-004-fabric-layer.md  ADR-005-async-tool-wrapper-convention.md  ADR-006-openai-compatible-provider.md  ADR-007-cloud-posture-as-reference-agent.md  ADR-008-eval-framework.md  ADR-009-memory-architecture.md  ADR-010-version-extension-template.md  ADR-011-pr-flow-and-branch-protection-discipline.md  ADR-012-claims-subject-namespace.md  ADR-014-sbom-ownership-boundary.md  ADR-015-secrets-in-runtime-ownership-boundary.md  ADR-016-tool-proxy-hard-boundary.md  ADR-017-v0-2-cycle-quality-gate.md  ADR-018-graph-type-catalogue.md  ADR-019-shared-kg-writer-base.md  ADR-020-aispm-ocsf-classes.md  ADR-021-skill-trace-persistence-t2.md  ADR-022-relationships-cross-run-dedup.md  ADR-023-canonical-resource-keys.md  _template.md
docs/agents/: agent_specification_with_harness.md
docs/agents/_archive/: AGENT_SPEC_PART1.md  AGENT_SPEC_PART3.md  README.md
docs/architecture/: platform_architecture.md  runtime_charter.md
docs/design/console/: README.md
docs/runbooks/: fabric.md
docs/strategy/: PRD.md  VISION.md  attack-path-roadmap-to-northstar.md  competitive-benchmark-2026-06-08.md  detection-combination-plan-2026-06-27.md  graph-moat-roadmap-2026-07-01.md  graph-model-scope-map-2026-06-29.md  nexus-agent-maturity-roadmap-2026-06-07.md  slice-1-can-escalate-to-design-2026-06-29.md  track-b-generic-path-engine-design-2026-06-27.md  track-b-to-production-plan-2026-06-28.md  wiz-coverage-denominator-2026-06-28.md
docs/superpowers/brainstorms/: 2026-05-30-v0-2-5-skill-optimization-brainstorm.md  2026-06-07-charter-tenant-rls-fix-brainstorm.md  2026-06-07-f-3-cloud-posture-v0-2-brainstorm.md  2026-06-08-charter-multi-tenant-rls-substrate-brainstorm.md  2026-06-09-d-1-vulnerability-v0-2-brainstorm.md  2026-06-09-d-2-identity-v0-2-brainstorm.md  2026-06-09-d-5-multi-cloud-posture-v0-2-brainstorm.md
docs/superpowers/plans/: 2026-05-08-build-roadmap.md  2026-05-08-f-1-runtime-charter-v0.1.md  2026-05-08-f-3-cloud-posture-reference-nlah.md  2026-05-08-p0-1-repo-bootstrap.md  2026-05-10-d-1-vulnerability-agent.md  2026-05-10-f-2-eval-framework-v0.1.md  2026-05-11-d-2-identity-agent.md  2026-05-11-d-3-runtime-threat-agent.md  2026-05-11-f-4-auth-tenant-manager.md  2026-05-11-f-5-memory-engines.md  2026-05-12-f-6-audit-agent.md  2026-05-13-d-4-network-threat-agent.md  2026-05-13-d-5-multi-cloud-posture.md  2026-05-13-d-6-kubernetes-posture.md  2026-05-13-d-7-investigation-agent.md  2026-05-16-a-1-remediation-agent.md  2026-05-16-d-6-v0-2-live-cluster-api.md  2026-05-16-d-6-v0-3-in-cluster-mode.md  2026-05-17-a-1-earned-autonomy-pipeline.md  2026-05-17-a-1-v0-1-2-cli-promotion-wiring.md  2026-05-17-f-7-v0-1-fabric-runtime.md  2026-05-17-f-7-v0-2-d-7-events-migration.md  2026-05-18-kg-loop-closure-cloud-posture-to-semanticstore.md  2026-05-19-f5-ltree-substrate-fix.md  2026-05-20-d-5-data-security-v0-1.md  2026-05-21-a-4-meta-harness-v0-1.md  2026-05-21-d-12-curiosity-v0-1.md  2026-05-21-d-13-synthesis-v0-1.md  (+33 more)
scripts/: verify-charter-live-postgres.sh
(+49 files in other folders)
