[project]
name = "nexus-cyber-os"
version = "0.1.0"
description = "Nexus Cyber OS — monorepo root"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/charter",
    "packages/eval-framework",
    "packages/agents/cloud-posture",
    "packages/agents/vulnerability",
    "packages/agents/identity",
    "packages/agents/runtime-threat",
    "packages/agents/audit",
    "packages/control-plane",
    "packages/shared",
]

[tool.uv.sources]
nexus-charter = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "dist", "build", ".turbo"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF", "S"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # assert allowed in tests

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["dist", "build", ".venv", "tests"]
files = [
    "packages/charter/src",
    "packages/eval-framework/src",
    "packages/agents/cloud-posture/src",
    "packages/agents/vulnerability/src",
    "packages/agents/identity/src",
    "packages/agents/runtime-threat/src",
    "packages/agents/audit/src",
    "packages/control-plane/src",
    "packages/shared/src",
]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers --strict-config -p no:cacheprovider --import-mode=importlib"
markers = [
    "integration: live integration tests that require external services (skipped by default; opt in with NEXUS_LIVE_* env vars)",
]
