[project]
name = "nexus-cyber-os"
version = "0.1.0"
description = "Nexus Cyber OS — monorepo root"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/charter",
    "packages/eval-framework",
    "packages/runtime",
    "packages/agents/cloud-posture",
    "packages/agents/vulnerability",
    "packages/agents/identity",
    "packages/agents/runtime-threat",
    "packages/agents/audit",
    "packages/agents/investigation",
    "packages/agents/network-threat",
    "packages/agents/multi-cloud-posture",
    "packages/agents/k8s-posture",
    "packages/agents/remediation",
    "packages/agents/data-security",
    "packages/agents/threat-intel",
    "packages/agents/compliance",
    "packages/agents/synthesis",
    "packages/agents/curiosity",
    "packages/agents/meta-harness",
    "packages/agents/supervisor",
    "packages/control-plane",
    "packages/shared",
]

[tool.uv.sources]
nexus-charter = { workspace = true }

[dependency-groups]
# Lint, type-check, and test tooling for the whole monorepo. Centralised
# here so `uv sync` (which activates the default dev group) brings them in —
# `uv sync --all-extras` at the workspace root does NOT propagate workspace
# members' [project.optional-dependencies], so CI couldn't find pytest even
# though every member declares it. Keeping the per-member dev extras in
# place too (they're still useful for `pip install -e .[dev]` flows).
dev = [
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "types-PyYAML>=6.0.0",
    # psycopg2 powers the alembic *sync* env that charter's live-Postgres
    # integration test drives (it swaps the DSN +asyncpg -> +psycopg2). It was
    # previously undeclared, so a clean `uv sync` couldn't run that lane. Lives
    # at root (not packages/charter) so it doesn't trip the WI-1 substrate seal.
    "psycopg2-binary>=2.9.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "dist", "build", ".turbo"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF", "S"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # assert allowed in tests

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["dist", "build", ".venv", "tests"]
files = [
    "packages/charter/src",
    "packages/eval-framework/src",
    "packages/runtime/src",
    "packages/agents/cloud-posture/src",
    "packages/agents/vulnerability/src",
    "packages/agents/identity/src",
    "packages/agents/runtime-threat/src",
    "packages/agents/audit/src",
    "packages/agents/investigation/src",
    "packages/agents/network-threat/src",
    "packages/agents/multi-cloud-posture/src",
    "packages/agents/k8s-posture/src",
    "packages/agents/remediation/src",
    "packages/agents/data-security/src",
    "packages/agents/threat-intel/src",
    "packages/agents/compliance/src",
    "packages/agents/synthesis/src",
    "packages/agents/curiosity/src",
    "packages/control-plane/src",
    "packages/shared/src",
]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["kubernetes", "kubernetes.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers --strict-config -p no:cacheprovider --import-mode=importlib"
markers = [
    "integration: live integration tests that require external services (skipped by default; opt in with NEXUS_LIVE_* env vars)",
]
